[package]
name = "expander"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
regex = "1.11.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder", "snowflake"] }
